# agent-starter-python

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  implementation_note.md  pyproject.toml  review.md
src/: agent.py  audio_pipeline.py  gtcrn_audio_pipeline.py  smart_turn_adapter.py  ten_vad_adapter.py
tests/: test_agent.py  test_agent_wiring.py  test_gtcrn_audio_pipeline.py  test_smart_turn_gate.py  test_ten_vad_adapter.py
